tests/NormalTests/paczka1/fuzzy1/94097548.err
Error in line 9: zaf S683 36,0
Error in line 18: GCfc75hUTF S683 51,2
Error in line 19: GCfc75hUTF S184 61,8
Error in line 24: FtY A788 234,6
